WatchList and Watched pagination