@@ -1,9 +1,6 @@
 package com.arturviader.pelisbdapi.service;
 
-import com.arturviader.pelisbdapi.dto.UserWatchListMapper;
-import com.arturviader.pelisbdapi.dto.UserWatchedMapper;
-import com.arturviader.pelisbdapi.dto.WatchedItemDto;
-import com.arturviader.pelisbdapi.dto.WatchlistItemDto;
+import com.arturviader.pelisbdapi.dto.*;
 import com.arturviader.pelisbdapi.exception.ResourceNotFoundException;
 import com.arturviader.pelisbdapi.model.*;
 import com.arturviader.pelisbdapi.repository.UserEpisodeProgressRepository;
@@ -15,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -80,21 +78,6 @@ public class UserMediaServiceImpl implements UserMediaService {
     }
 
     @Override
-    public List<WatchedItemDto> getWatchedList(User user) {
-        List<UserWatchedItem> list = watchedRepo.findByUser(user);
-        String userId = user.getUserName();
-
-        List<UserWatchedItem> watchedItems = watchedRepo.findByUser(user);
-
-        return watchedItems.stream()
-                .map(item -> {
-                    boolean isWatchListed = isMovieInWatchlist(userId, item.getItemId(), item.getType());
-                    return userWatchedMapper.toDtoWithMovieData(item, isWatchListed);
-                })
-                .collect(Collectors.toList());
-    }
-
-    @Override
     public boolean isMovieWatched(Long tmdbId, String userName, MediaType mediaType) {
         Optional<User> userOpt = userRepository.findByUserName(userName);
 
@@ -137,20 +120,74 @@ public class UserMediaServiceImpl implements UserMediaService {
     }
 
     @Override
-    public List<WatchlistItemDto> getWatchlist(User user) {
-        List<UserWatchlistItem> list = watchlistRepository.findByUser(user);
+    public WatchListResponse getWatchlist(User user, int page, int size, String sort) {
         String userId = user.getUserName();
-
         List<UserWatchlistItem> watchListItems = watchlistRepository.findByUser(user);
-
-        return watchListItems.stream()
+        int totalElements = watchListItems.size();
+        int totalPages = (int) Math.ceil((double) totalElements / size);
+        boolean first = false;
+        boolean last = false;
+        if(page<=1)
+        {
+            first=true;
+        }
+        if(page>=totalPages)
+        {
+            last = true;
+        }
+        int initialResult =(page-1)*size;
+        int endResult = initialResult + size;
+        if(endResult>totalElements)
+        {
+            endResult = totalElements-1;
+        }
+        List<UserWatchlistItem> results = new ArrayList<>();
+        for(int count=initialResult; count<=endResult;count++)
+        {
+            results.add(watchListItems.get(count));
+        }
+        List<WatchlistItemDto> itemsdto = results.stream()
                 .map(item -> {
                     boolean isWatched = isMovieWatched(item.getItemId(),userId, item.getType());
                     return userWatchListMapper.toDtoWithMovieData(item, isWatched);
                 })
-                .collect(Collectors.toList());
-
+                .toList();
+        return new WatchListResponse(itemsdto,page,size,totalElements,totalPages,last,first);
     }
 
-
+    @Override
+    public WatchedResponse getWatchedList(User user, int page, int size, String sort) {
+        String userId = user.getUserName();
+        List<UserWatchedItem> watchedItems = watchedRepo.findByUser(user);
+        int totalElements = watchedItems.size();
+        int totalPages = (int) Math.ceil((double) totalElements / size);
+        boolean first = false;
+        boolean last = false;
+        if(page<=1)
+        {
+            first=true;
+        }
+        if(page>=totalPages)
+        {
+            last = true;
+        }
+        int initialResult =(page-1)*size;
+        int endResult = initialResult + size;
+        if(endResult>totalElements)
+        {
+            endResult = totalElements-1;
+        }
+        List<UserWatchedItem> results = new ArrayList<>();
+        for(int count=initialResult; count<=endResult;count++)
+        {
+            results.add(watchedItems.get(count));
+        }
+        List<WatchedItemDto> itemsdto = results.stream()
+                .map(item -> {
+                    boolean isWatchListed = isMovieInWatchlist(userId, item.getItemId(), item.getType());
+                    return userWatchedMapper.toDtoWithMovieData(item, isWatchListed);
+                })
+                .toList();
+        return new WatchedResponse(itemsdto,page,size,totalElements,totalPages,last,first);
+    }
 }
